hphp/hack/test/typecheck/splat/error_req.php.like_types.exp
File "error_req.php", line 6, characters 8-9:
An array cannot be unpacked into the required arguments of a function (Typing[4359])
File "error_req.php", line 3, characters 10-10:
Definition is here
